--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon  src/hyper-express.ts"
+    "start": "nodemon  src/websocket.ts"
   },
   "dependencies": {
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.31.0",
     "@babel/cli": "^7.22.6",
     "@babel/core": "^7.22.8",
     "@babel/node": "^7.22.6",
@@ -15,7 +16,7 @@
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
     "express": "4.18.2",
-    "hyper-express": "^6.8.0",
+    "hyper-express": "^6.8.1",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "mysql": "^2.18.1",
